# ternary-diff

./: AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
examples/: readme_quickstart.rs
memory/: JOURNAL.md
src/: lib.rs
