[package]
name = "ternary-diff"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Diff and patch for ternary strategies: compare, merge, conflict resolution, three-way diff"
keywords = ["diff", "ternary", "merge", "patch", "strategy"]
categories = ["algorithms", "data-structures"]

[dependencies]
